--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,56 +1,71 @@
+/* universal */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
+/* body element */
 body {
     background-color: #d9dcd6;
 }
 
-.header {
+/* header element */
+header {
     padding: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+        "Lucida Sans", Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+/* h1 element within the header element */
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+/* set color of span */
+header h1 .seo {
     color: #d9dcd6;
 }
 
-.header div {
+/* CSS for nav element nested in header element */
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
     font-size: 20px;
 }
 
-.header div ul {
+/* CSS for ul element nested in nav 
+element nested in header element */
+header nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+/* CSS for li element nested in ul element 
+nested in nav element nested in header element */
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
 
+/* a element */
 a {
     color: #ffffff;
     text-decoration: none;
 }
 
+/* p element */
 p {
     font-size: 16px;
 }
 
-.hero {
+/* main element */
+main {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
@@ -59,142 +74,105 @@ p {
     background-position: center;
 }
 
+/* class to set img to left of text */
 .float-left {
     float: left;
     margin-right: 25px;
 }
 
+/* class to set img to right of text */
 .float-right {
     float: right;
     margin-left: 25px;
 }
 
-.content {
+/* section element */
+section {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
-.benefits {
+/* CSS for article element nested in section element */
+section article {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+/* CSS for h2 element nested in article 
+element nested in section element */
+section article h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+/* CSS for img element nested in article 
+element nested in section element */
+section article img {
+    max-height: 200px;
+}
+
+/* aside element */
+aside {
     margin-right: 20px;
     padding: 20px;
     clear: both;
     float: right;
     width: 20%;
     height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
     background-color: #2589bd;
 }
 
-.benefit-lead {
+/* CSS for article element 
+nested in aside element */
+aside article {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+/* CSS for h3 element nested in article
+element nested in aside element */
+aside article h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+/* CSS for img element nested in article
+element nested in aside element */
+aside article img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.footer {
+/* footer element */
+footer {
     padding: 30px;
     clear: both;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+        "Lucida Sans", Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+/* CSS for h2 element nested in footer element */
+footer h2 {
     font-size: 20px;
+}
+
+/* Media Query for a screen that has a width of up to 1011px */
+@media screen and (max-width: 1011px) {
+    header nav {
+        font-size: 18px;
+    }
+
+    section article h2 {
+        font-size: 30px;
+    }
 }
